--- a/Traversy Media/Build a Music Player/style.css
+++ b/Traversy Media/Build a Music Player/style.css
@@ -63,7 +63,7 @@ body {
   animation-play-state: paused;
 }
 .music-container.play .img-conatiner img {
-  /* animation-play-state: running; */
+  animation-play-state: running;
 }
 @keyframes rotate {
   from {
