--- a/Traversy Media/Build a Music Player/style.css
+++ b/Traversy Media/Build a Music Player/style.css
@@ -101,7 +101,7 @@ body {
   position: absolute;
   left: 20px;
   top: 0;
-  width: calc(100vh - 40px);
+  width: calc(100% - 40px);
   padding: 10px 10px 10px 150px;
   opacity: 0;
   transform: translateY(0%);
